tests/compile_fail/002_unknown_file_seek.vox
Seek source to line 1.
